# isokit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/isokit/: __init__.py  pack.py
tests/: test_pack.py
