[project]
name = "isokit"
version = "0.2.0"
description = "Pack first-boot config scripts into a Joliet+Rock-Ridge config ISO with a manifest."
requires-python = ">=3.14"
dependencies = [
    "pycdlib>=1.16.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/isokit"]
